:lipstick: fix margin for app container on mobile

--- a/src/components/App/index.module.scss
+++ b/src/components/App/index.module.scss
@@ -8,6 +8,13 @@
         flex-direction: column;
     }
 
+    @media screen and (max-width: 600px) {
+      .appContainer {
+        margin: 32px 10% 0 10%;
+    }
+  }
+  
+
     .appContent {
         background-color: #f4f4f4;
     }
